# mpp

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  go.mod  go.sum  main.go  main_test.go  sqlc.yaml
backend/apiv1/campaigns/: handlers.go  models.go  routes.go
backend/apiv1/clients/: client_list.json  generate_data.go  handlers.go  models.go  routes.go
backend/apiv1/companies/: handlers.go  models.go  routes.go
backend/apiv1/invoices/: handlers.go  models.go  routes.go
backend/apiv1/kanban/: handlers.go  models.go  routes.go
backend/apiv1/leads/: handlers.go  models.go  routes.go
backend/apiv1/users/: handlers.go  models.go  routes.go
backend/db/migrations/: 000001_initial_models.down.sql  000001_initial_models.up.sql  000002_campaign_sentiment.down.sql  000002_campaign_sentiment.up.sql  000002_is_paid_invoice.down.sql  000002_is_paid_invoice.up.sql  000003_kanban.down.sql  000003_kanban.up.sql  000003_mv_clients.down.sql  000003_mv_clients.up.sql  000004_sales_campaigns.down.sql  000004_sales_campaigns.up.sql  000005_add_type_to_campaign.down.sql  (+1 more)
backend/docs/: MIGRATIONS.md
backend/utils/: generate_data.go  types.go  validators.go
copilot/: pyproject.toml
copilot/app/: clippy_chain.py  dto.py  handle_sentiment.py  server.py
frontend/: .eslintrc.cjs  .prettierrc  Dockerfile  components.json  index.html  package-lock.json  package.json  playwright-ct.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/.nginx/: nginx-selfsigned.crt  nginx-selfsigned.key  nginx.conf
frontend/src/: App.tsx  main.tsx
(+126 files in other folders)
